Stop margin break on small layouts (#54)
Fixes #53

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -339,6 +339,12 @@
   }
 }
 
+@media (max-width: 600px) {
+  .home__ctas.home__ctas--over {
+    margin-top: 0;
+  }
+}
+
 @media (min-width: 800px) {
   .home-cds-info{
     font-size: 22px;
